samples/_failures_safe/1761370519_8ea8f2_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a7e278d9.c: In function ‘main’:
./samples/SAFE/__tmp_a7e278d9.c:137:29: error: missing terminating " character
  137 |             fprintf(sample, "2024-01-
      |                             ^~~~~~~~~
./samples/SAFE/__tmp_a7e278d9.c:137:13: error: expected expression at end of input
  137 |             fprintf(sample, "2024-01-
      |             ^~~~~~~
./samples/SAFE/__tmp_a7e278d9.c:137:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_a7e278d9.c:137:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_a7e278d9.c:137:13: error: expected declaration or statement at end of input
